--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,21 @@ body ul {
 	max-width: 960px;
 }
 
+/********************************************************************
+* SOBRE
+*********************************************************************/
 
+.descricao-sobre ul li{
+	display: inline-block;
+	vertical-align: center;
+	text-align: justify;
+	
+}
+
+.desc-sobre {
+	width: 627px;
+	padding-left: 8px;
+}
 /********************************************************************
 * MAIN-HEADER
 *********************************************************************/
@@ -56,12 +70,14 @@ body ul {
 	text-transform: uppercase;
 }
 
-.main-nav-links:hover {
-	border-top: 5px solid #FF0D40;
-	border-bottom: 5px solid #FF0D40;
+.main-nav-links:hover, a.active {
+	border-top: 10px solid #FF0D40;
+	border-bottom: 10px solid #FF0D40;
 	padding-top: 2px;
 	padding-bottom: 2px;
+	transition:all ease-out 0.5s;
 }
+
 
 .main-nav-links {
 	overflow: hidden;
@@ -112,39 +128,39 @@ body ul {
 a,img {border: none;}
 
 .trs {-webkit-transition:all ease-out 0.5s;
-    -moz-transition:all ease-out 0.5s;
-    -o-transition:all ease-out 0.5s;
-    -ms-transition:all ease-out 0.5s;
-    transition:all ease-out 0.5s;}	
+	-moz-transition:all ease-out 0.5s;
+	-o-transition:all ease-out 0.5s;
+	-ms-transition:all ease-out 0.5s;
+	transition:all ease-out 0.5s;}	
 
-#slider {position: relative; z-index: 1;}
-#slider a { position: absolute; top: 0; left: 0; opacity: 0;filter:alpha(opacity=0);}
-.ativo {opacity: 1!important; filter:alpha(opacity=100)!important;}
- 
-/*controladores*/
-span {background: #FF0D40; cursor: pointer; opacity: 0;filter:alpha(opacity=0); position: absolute; bottom: 40%; width: 43px; height: 43px; z-index: 5;}
+	#slider {position: relative; z-index: 1;}
+	#slider a { position: absolute; top: 0; left: 0; opacity: 0;filter:alpha(opacity=0);}
+	.ativo {opacity: 1!important; filter:alpha(opacity=100)!important;}
 
-.next {right: 300px;}
-.next:hover {background: rgba(255,255,255,.0)}
+	/*controladores*/
+	span {background: #FF0D40; cursor: pointer; opacity: 0;filter:alpha(opacity=0); position: absolute; bottom: 40%; width: 43px; height: 43px; z-index: 5;}
 
-.next:before,.next:after {left: 21px;}
+	.next {right: 300px;}
+	.next:hover {background: rgba(255,255,255,.0)}
 
-.next:before {
-    -webkit-transform: rotate(-42deg);
-    top: 5px;
-}
+	.next:before,.next:after {left: 21px;}
 
-.next:after {
-    -webkit-transform: rotate(-132deg);
-    box-shadow: 20px 22px 5px #000;
-    top: 19px;
-}
+	.next:before {
+		-webkit-transform: rotate(-42deg);
+		top: 5px;
+	}
 
-.next:before,.next:after,.prev:before,.prev:after {content: "";
-    height: 20px;
-    background: #fff;
-    width: 1px;
-    position: absolute;
+	.next:after {
+		-webkit-transform: rotate(-132deg);
+		box-shadow: 20px 22px 5px #000;
+		top: 19px;
+	}
+
+	.next:before,.next:after,.prev:before,.prev:after {content: "";
+	height: 20px;
+	background: #fff;
+	width: 1px;
+	position: absolute;
 }
 
 .prev {left: 300px;}
@@ -152,22 +168,22 @@ span {background: #FF0D40; cursor: pointer; opacity: 0;filter:alpha(opacity=0); 
 
 .prev:before,.prev:after {left: 18px;}
 .prev:before {
-    -webkit-transform: rotate(42deg);
-    top: 5px;
+	-webkit-transform: rotate(42deg);
+	top: 5px;
 }
 
 .prev:after {
-    -webkit-transform: rotate(132deg);
-    top: 19px;
+	-webkit-transform: rotate(132deg);
+	top: 19px;
 }
- 
+
 figure:hover span {opacity: 0.76;filter:alpha(opacity=76);}
 
 figure {
-    /*max-width: 100%;*/
-    height: 434px;
-    position: relative;
-    overflow: hidden;    
+	/*max-width: 100%;*/
+	height: 434px;
+	position: relative;
+	overflow: hidden;    
 }
 
 #slider img {
@@ -178,18 +194,25 @@ figure {
 /*figure img {
 	position: relative;
 	left: 65px;
-}*/
+	}*/
 
-/*figcaption {padding-left: 20px;color: #fff; font-family: "Kaushan Script","Lato","arial"; font-size: 22px; background: rgba(1, 144, 238, 0.76); width: 100%; position: absolute; bottom: 0; left: 0; line-height: 55px; height: 55px; z-index: 5}*/
+	/*figcaption {padding-left: 20px;color: #fff; font-family: "Kaushan Script","Lato","arial"; font-size: 22px; background: rgba(1, 144, 238, 0.76); width: 100%; position: absolute; bottom: 0; left: 0; line-height: 55px; height: 55px; z-index: 5}*/
 
 
 
 /********************************************************************
-* HOMER DE SERVIÇOS
+* HOME DE SERVIÇOS
 *********************************************************************/
 
 section p {
-	background: rgba(255, 13, 64, 0.76); width: 142px; position: absolute; top: 95px; left: 4px; line-height: 30px; 	height: 30px; z-index: 5; 
+	background: rgba(255, 13, 64, 0.76);
+	width: 142px;
+	position: absolute;
+	top: 95px; 
+	left: 4px;
+	line-height: 30px;
+	height: 30px;
+	z-index: 5; 
 	color: #fff;
 }
 
@@ -199,39 +222,39 @@ section p {
 }
 
 .box { 
-  width: 150px;
-  position: relative;
-  float: left;
-  margin: .3em;
+	width: 150px;
+	position: relative;
+	float: left;
+	margin: .3em;
 }
 .inner-content {
-  background: #fff;
-  /*padding: .75em;*/
-  width: 150px;
-  height: 150px;
+	background: #fff;
+	/*padding: .75em;*/
+	width: 150px;
+	height: 150px;
 }
 
 .border-top, .border-bottom {
-  width: 0%;
-  height: 3px;
-  background: #FF0D40;
-  position: absolute;
-  transition: all .3s ease;
+	width: 0%;
+	height: 3px;
+	background: #FF0D40;
+	position: absolute;
+	transition: all .3s ease;
 }
 
 .border-top { top: 0; left: 0; }
 .border-bottom { bottom: 0; right: 0; }
 .box:hover .border-top, 
 .box:hover .border-bottom {
-  width: 100%;
+	width: 100%;
 }
 
 .border-right, .border-left {
-  width: 3px;
-  height: 0%;
-  background: #FF0D40;
-  position: absolute;
-  transition: all .3s ease .3s;
+	width: 3px;
+	height: 0%;
+	background: #FF0D40;
+	position: absolute;
+	transition: all .3s ease .3s;
 
 } 
 
@@ -239,7 +262,7 @@ section p {
 .border-left { bottom: 0; left: 0; }
 .box:hover .border-right, 
 .box:hover .border-left {
-  height: 100%;
+	height: 100%;
 }
 
 .servicos img {
@@ -247,9 +270,7 @@ section p {
 	height: 150px;
 }
 
-.servicos {
-	padding-bottom: 30px;
-}
+
 /********************************************************************
 * FOOTER
 *********************************************************************/
@@ -257,8 +278,8 @@ section p {
 	background-color: #FF0D40;
 	color: #f2fffc;
 	width: 100%;
-  position: relative;
-  float: left;
+	position: relative;
+	float: left;
 }
 
 footer {
@@ -301,17 +322,161 @@ footer {
 }
 
 .criador-link a {
-	position: relative;
-	left: 630px;
+	
+	/*position: relative;
+	left: 630px;*/
 	text-decoration: none;
 	text-transform: uppercase;
 }
 
- .criador-link:hover {
- 	background-color: #FF0D40;
- }
+.criador-link:hover {
+	background-color: #FF0D40;
+}
 
 /*.criador:hover {
 	border: solid 1px;
 	color: 	#FF0D40;
-}*/
+	}*/
+
+/********************************************************************
+* MENU SERVICOS
+*********************************************************************/
+.texto {
+	width: 400px;
+	color: #fff;
+
+
+}
+
+.controle-solar p {
+	content: '';
+	background-color: rgba(182, 176, 59, 1);
+	margin: 0 auto;
+	opacity: 0.5;
+	color: #000;
+	padding: 15px 50px 15px ;
+	position: absolute;
+	top: 320px;
+	font-size: 18px;
+	box-shadow: 1px 1px 15px #fff;
+	text-transform: uppercase;
+	font-weight: bold;
+
+}
+
+.controle-solar2 p {
+	content: '';
+	background-color: rgba(182, 176, 59, 1);
+	margin: 0 auto;
+	opacity: 0.5;
+	color: #000;
+	padding: 15px 50px 15px 50px ;
+	position: absolute;
+	top: 1020px;
+	font-size: 18px;
+	box-shadow: 1px 1px 15px #fff;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+
+.texto a {
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #fff;
+	
+}
+
+td {
+	min-height: 700px;
+	display: inline-block;
+
+}
+
+.servicos-link li {
+	background-color: #400202;
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-bottom: 5px;
+	text-decoration: none;
+	border: 0px;
+}
+
+.servicos-link li:hover {
+	text-shadow:2px 2px 25px #fff;
+	border-left: 3px solid #fff;
+	text-decoration: none;
+	transition:all ease-out 0.3s;
+
+
+}
+
+.servicos-link p {
+	padding-right: 5px;
+	text-align: justify;
+}
+
+
+.servicos-link li:visited:after {
+	content: '';
+	color: #400202;
+}
+/********************************************************************
+* CURSOS
+*********************************************************************/
+.cursos, .cursos-grade  {
+	background-color: #ffffff;
+	padding: 10px 10px 10px 10px;
+	box-shadow: 2px 0px 15px 1px #888888;
+}
+
+.cursos p, .cursos-grade p {
+	background-color: #400202;
+	color: #ffffff;
+	text-transform: uppercase;
+	padding: 3px 3px 3px 3px;
+}
+
+.cursos h1 {
+	text-align: center;
+	text-transform: uppercase;
+
+}
+
+.titulo h1 {
+	text-shadow: 2px 2px 15px #888888;
+}
+
+
+.cursos-grade {
+	width: 200px;
+	height: 200px;
+	display: inline-block;
+	overflow: hidden;
+	margin: 0 auto;
+
+}
+
+
+.cursos-grade + .cursos-grade {
+	margin-left: 20px;
+}
+
+/********************************************************************
+* CONTATO
+*********************************************************************/
+.contato ul li {
+	display: inline-block;
+	vertical-align: top;
+	padding-right: 10px;
+	
+}
+
+.contato a {
+	color: #000000;
+}
+
+.contato a:hover {
+	
+	text-decoration: none;
+}
