--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,8 @@ body ul {
 }
 
 .main-nav-links:hover, a.active {
-	border-top: 10px solid #FF0D40;
-	border-bottom: 10px solid #FF0D40;
+	border-top: 10px solid #474747;
+	border-bottom: 10px solid #474747;
 	padding-top: 2px;
 	padding-bottom: 2px;
 	transition:all ease-out 0.5s;
@@ -102,7 +102,7 @@ body ul {
 }
 
 .socias:hover {
-	background-color: #FF0D40;
+	background-color: #474747;
 }
 
 
@@ -138,7 +138,7 @@ a,img {border: none;}
 	.ativo {opacity: 1!important; filter:alpha(opacity=100)!important;}
 
 	/*controladores*/
-	span {background: #FF0D40; cursor: pointer; opacity: 0;filter:alpha(opacity=0); position: absolute; bottom: 40%; width: 43px; height: 43px; z-index: 5;}
+	span {background: #474747; cursor: pointer; opacity: 0;filter:alpha(opacity=0); position: absolute; bottom: 40%; width: 43px; height: 43px; z-index: 5;}
 
 	.next {right: 300px;}
 	.next:hover {background: rgba(255,255,255,.0)}
@@ -237,7 +237,7 @@ section p {
 .border-top, .border-bottom {
 	width: 0%;
 	height: 3px;
-	background: #FF0D40;
+	background: #474747;
 	position: absolute;
 	transition: all .3s ease;
 }
@@ -252,7 +252,7 @@ section p {
 .border-right, .border-left {
 	width: 3px;
 	height: 0%;
-	background: #FF0D40;
+	background: #474747;
 	position: absolute;
 	transition: all .3s ease .3s;
 
@@ -275,7 +275,7 @@ section p {
 * FOOTER
 *********************************************************************/
 .rodape {
-	background-color: #FF0D40;
+	background-color: #474747;
 	color: #f2fffc;
 	width: 100%;
 	position: relative;
@@ -330,12 +330,12 @@ footer {
 }
 
 .criador-link:hover {
-	background-color: #FF0D40;
+	background-color: #474747;
 }
 
 /*.criador:hover {
 	border: solid 1px;
-	color: 	#FF0D40;
+	color: 	#474747;
 	}*/
 
 /********************************************************************
