--- a/css/style.css
+++ b/css/style.css
@@ -496,4 +496,12 @@ td {
 	.descricao-sobre {
 		text-align: center;
 	}
+		.cursos-grade {
+    width: 300px;
+    height: 300px;
+}
+}
+
+.grade-curso {
+	text-align: center;
 }
