--- a/css/style.css
+++ b/css/style.css
@@ -504,7 +504,14 @@ td {
 .grade-curso {
 	text-align: center;
 }
-	.logo {
+}
+
+@media (min-width: 1024px) {
+#slider img {
+	margin-left: 110px;
+}
+
+.logo {
 	width: 450px;
 	height: 189px;
 	display: inline-block;
