--- a/css/style.css
+++ b/css/style.css
@@ -514,3 +514,8 @@ td {
 	background-image: url(../img/ico/logo-nome.png); 
 }
 }
+
+@media (min-width: 1024px)
+#slider img {
+    text-align: center;
+}
