--- a/css/style.css
+++ b/css/style.css
@@ -117,87 +117,6 @@ body ul {
 	text-indent: -99999px;
 }
 
-/********************************************************************
-* CARROSEL
-*********************************************************************/
-.main-carrosel {
-	padding-top: 30px;
-	padding-bottom: 30px;
-}
-
-a,img {border: none;}
-
-.trs {-webkit-transition:all ease-out 0.5s;
-	-moz-transition:all ease-out 0.5s;
-	-o-transition:all ease-out 0.5s;
-	-ms-transition:all ease-out 0.5s;
-	transition:all ease-out 0.5s;}	
-
-	#slider {position: relative; z-index: 1;}
-	#slider a { position: absolute; top: 0; left: 0; opacity: 0;filter:alpha(opacity=0);}
-	.ativo {opacity: 1!important; filter:alpha(opacity=100)!important;}
-
-	/*controladores*/
-	span {background: #474747; cursor: pointer; opacity: 0;filter:alpha(opacity=0); position: absolute; bottom: 40%; width: 43px; height: 43px; z-index: 5;}
-
-	.next {right: 300px;}
-	.next:hover {background: rgba(255,255,255,.0)}
-
-	.next:before,.next:after {left: 21px;}
-
-	.next:before {
-		-webkit-transform: rotate(-42deg);
-		top: 5px;
-	}
-
-	.next:after {
-		-webkit-transform: rotate(-132deg);
-		box-shadow: 20px 22px 5px #000;
-		top: 19px;
-	}
-
-	.next:before,.next:after,.prev:before,.prev:after {content: "";
-	height: 20px;
-	background: #fff;
-	width: 1px;
-	position: absolute;
-}
-
-.prev {left: 300px;}
-.prev:hover {background: rgba(255,255,255,.0)}
-
-.prev:before,.prev:after {left: 18px;}
-.prev:before {
-	-webkit-transform: rotate(42deg);
-	top: 5px;
-}
-
-.prev:after {
-	-webkit-transform: rotate(132deg);
-	top: 19px;
-}
-
-figure:hover span {opacity: 0.76;filter:alpha(opacity=76);}
-
-figure {
-	/*max-width: 100%;*/
-	height: 434px;
-	position: relative;
-	overflow: hidden;    
-}
-
-#slider img {
-	width: 100%;
-	height: 100%;	
-}
-
-/*figure img {
-	position: relative;
-	left: 65px;
-	}*/
-
-	/*figcaption {padding-left: 20px;color: #fff; font-family: "Kaushan Script","Lato","arial"; font-size: 22px; background: rgba(1, 144, 238, 0.76); width: 100%; position: absolute; bottom: 0; left: 0; line-height: 55px; height: 55px; z-index: 5}*/
-
 
 
 /********************************************************************
@@ -519,3 +438,151 @@ td {
 	}
 }
 
+
+/*==============================================================================================================
+ CAROUSEL
+================================================================================================================*/
+
+/* CUSTOMIZAÇÃO OWL CAROUSEL */
+
+.owl-theme{
+	padding: 0 50px;
+}
+
+.owl-theme .owl-item div{width: 100%; padding: 0 20px;}
+.owl-theme .owl-item div p{font-size:28px;}
+.owl-theme .owl-item div:hover{cursor: move;}
+
+/* PREV NEXT */
+
+.owl-theme .owl-controls{margin-top:10px; text-align:center; -webkit-tap-highlight-color:transparent; }
+
+.owl-theme .owl-controls .owl-nav [class*=owl-]{width: 33px; height: 33px; color:#fff; font-size:28px; line-height: 30px; margin:5px; background:#000; display:inline-block;cursor:pointer; -webkit-border-radius:100%; -moz-border-radius:100%; border-radius:100%; -webkit-transition: all 0.5s ease-out; -moz-transition: all 0.5s ease-out; -ms-transition: all 0.5s ease-out; transition: all 0.5s ease-out;}
+.owl-theme .owl-controls .owl-nav [class*=owl-]:hover{background:#999; color:#fff; text-decoration:none}
+.owl-theme .owl-controls .owl-nav .disabled{opacity:.5; cursor:default}
+
+.owl-theme .owl-controls .owl-nav .owl-prev{position:absolute; left: 0; top: 220px; text-indent: -2px;}
+.owl-theme .owl-controls .owl-nav .owl-next{position:absolute; right: 0; top: 220px; text-indent: 2px;}
+
+/* PAGINACAO */
+
+.owl-theme .owl-dots .owl-dot{display:inline-block; zoom:1; *display:inline}
+.owl-theme .owl-dots .owl-dot span{width:10px; height:10px; margin:5px 7px; background:#000; display:block;-webkit-backface-visibility:visible;-webkit-transition:opacity 200ms ease;-moz-transition:opacity 200ms ease;-ms-transition:opacity 200ms ease;-o-transition:opacity 200ms ease;transition:opacity 200ms ease;-webkit-border-radius:30px;-moz-border-radius:30px; border-radius:30px}
+.owl-theme .owl-dots .owl-dot.active span,.owl-theme .owl-dots .owl-dot:hover span{background:#999;}
+
+
+/*  ANIMACAO DO PLUGUIN */
+
+.owl-carousel .animated {-webkit-animation-duration: 1000ms; animation-duration: 1000ms; -webkit-animation-fill-mode: both;  animation-fill-mode: both;}
+.owl-carousel .owl-animated-in {z-index: 0;}
+.owl-carousel .owl-animated-out { z-index: 1;}
+.owl-carousel .fadeOut {-webkit-animation-name: fadeOut; animation-name: fadeOut;}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+/*  AUTO HEIGHT DO PLUGUIN */
+
+.owl-height {-webkit-transition: height 500ms ease-in-out; -moz-transition: height 500ms ease-in-out; -ms-transition: height 500ms ease-in-out;  -o-transition: height 500ms ease-in-out;  transition: height 500ms ease-in-out;}
+
+/*  CORE DO PLUGIN */
+
+.owl-carousel {display: none; -webkit-tap-highlight-color: transparent;  position: relative; z-index: 1;}
+.owl-carousel .owl-stage {position: relative; -ms-touch-action: pan-Y;}
+.owl-carousel .owl-stage:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;}
+.owl-carousel .owl-stage-outer {position: relative; overflow: hidden; -webkit-transform: translate3d(0px, 0px, 0px);}
+.owl-carousel .owl-controls .owl-nav .owl-prev,
+.owl-carousel .owl-controls .owl-nav .owl-next,
+.owl-carousel .owl-controls .owl-dot {cursor: pointer; cursor: hand; -webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none; user-select: none;}
+.owl-carousel.owl-loaded {display: block;}
+.owl-carousel.owl-loading {opacity: 0; display: block;}
+.owl-carousel.owl-hidden {opacity: 0;}
+.owl-carousel .owl-refresh .owl-item {display: none;}
+.owl-carousel .owl-item {position: relative; min-height: 1px; float: left; -webkit-backface-visibility: hidden; -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
+.owl-carousel .owl-item img {display: block; width: 100%; -webkit-transform-style: preserve-3d;}
+.owl-carousel.owl-text-select-on .owl-item {-webkit-user-select: auto; -moz-user-select: auto; -ms-user-select: auto; user-select: auto;}
+.owl-carousel .owl-grab {cursor: move; cursor: -webkit-grab; cursor: -o-grab; cursor: -ms-grab; cursor: grab;}
+.owl-carousel.owl-rtl {direction: rtl;}
+.owl-carousel.owl-rtl .owl-item {float: right;}
+
+/* No Js */
+.no-js .owl-carousel {display: block;}
+
+/*  LAZYLOAD DO PLUGUIN */
+
+.owl-carousel .owl-item .owl-lazy {opacity: 0; -webkit-transition: opacity 400ms ease; -moz-transition: opacity 400ms ease; -ms-transition: opacity 400ms ease; -o-transition: opacity 400ms ease; transition: opacity 400ms ease;}
+.owl-carousel .owl-item img {transform-style: preserve-3d;}
+
+/*  COM VIDEO DO PLUGUIN */
+
+.owl-carousel .owl-video-wrapper {position: relative; height: 100%; background: #000;}
+.owl-carousel .owl-video-play-icon {position: absolute; height: 80px; width: 80px; left: 50%; top: 50%; margin-left: -40px; margin-top: -40px;
+  background: url("owl.video.play.png") no-repeat; cursor: pointer; z-index: 1; -webkit-backface-visibility: hidden; -webkit-transition: scale 100ms ease;
+  -moz-transition: scale 100ms ease; -ms-transition: scale 100ms ease; -o-transition: scale 100ms ease; transition: scale 100ms ease;}
+.owl-carousel .owl-video-play-icon:hover {-webkit-transition: scale(1.3, 1.3); -moz-transition: scale(1.3, 1.3); -ms-transition: scale(1.3, 1.3);  -o-transition: scale(1.3, 1.3); transition: scale(1.3, 1.3);}
+.owl-carousel .owl-video-playing .owl-video-tn,
+.owl-carousel .owl-video-playing .owl-video-play-icon {display: none;}
+.owl-carousel .owl-video-tn {opacity: 0; height: 100%; background-position: center center; background-repeat: no-repeat; -webkit-background-size: contain;
+  -moz-background-size: contain; -o-background-size: contain; background-size: contain; -webkit-transition: opacity 400ms ease;-moz-transition: opacity 400ms ease; -ms-transition: opacity 400ms ease;-o-transition: opacity 400ms ease; transition: opacity 400ms ease;}
+.owl-carousel .owl-video-frame {position: relative; z-index: 1;}
+
+
+// -----------------------------
+
+
+
+/* Feel free to change duration  */ 
+.animated  {
+  -webkit-animation-duration : 1000 ms  ;
+  animation-duration : 1000 ms  ;
+  -webkit-animation-fill-mode : both  ;
+  animation-fill-mode : both  ;
+}  
+/* .owl-animated-out - only for current item */ 
+/* This is very important class. Use z-index if you want move Out item above In item */ 
+.owl-animated-out {
+  z-index : 1 
+   }
+/* .owl-animated-in - only for upcoming item
+/* This is very important class. Use z-index if you want move In item above Out item */ 
+.owl-animated-in {
+  z-index : 0 
+   }
+/* .fadeOut is style taken from Animation.css and this is how it looks in owl.carousel.css:  */ 
+.fadeOut  {
+  -webkit-animation-name : fadeOut  ;
+  animation-name : fadeOut  ;
+}  
+@-webkit-keyframes  fadeOut  {
+  0% {
+    opacity : 1   ;
+  }  
+  100% {
+    opacity : 0   ;
+  }  
+}
+@keyframes  fadeOut  {
+  0% {
+    opacity : 1   ;
+  }  
+  100% {
+    opacity : 0   ;
+  }  
+}
