--- a/css/style.css
+++ b/css/style.css
@@ -464,19 +464,21 @@ td {
 .owl-theme .owl-controls .owl-nav .owl-prev{position:absolute; left: 0; top: 220px; text-indent: -2px;}
 .owl-theme .owl-controls .owl-nav .owl-next{position:absolute; right: 0; top: 220px; text-indent: 2px;}
 
+.owl-theme2 .owl-controls .owl-nav [class*=owl-]{width: 40px; height: 40px; color:#fff; font-size:18px; line-height: 40px; margin:5px; background:#000; display:inline-block;cursor:pointer; -webkit-border-radius:0; -moz-border-radius:0; border-radius:0; -webkit-transition: all 0.5s ease-out; -moz-transition: all 0.5s ease-out; -ms-transition: all 0.5s ease-out; transition: all 0.5s ease-out;}
+.owl-theme2 .owl-controls .owl-nav .owl-prev{position:absolute; left: 460px; top: 170px; text-indent: -2px;}
+.owl-theme2 .owl-controls .owl-nav .owl-next{position:absolute; right: 460px; top: 170px; text-indent: 2px;}
 /* PAGINACAO */
 
 .owl-theme .owl-dots .owl-dot{display:inline-block; zoom:1; *display:inline}
 .owl-theme .owl-dots .owl-dot span{width:10px; height:10px; margin:5px 7px; background:#000; display:block;-webkit-backface-visibility:visible;-webkit-transition:opacity 200ms ease;-moz-transition:opacity 200ms ease;-ms-transition:opacity 200ms ease;-o-transition:opacity 200ms ease;transition:opacity 200ms ease;-webkit-border-radius:30px;-moz-border-radius:30px; border-radius:30px}
 .owl-theme .owl-dots .owl-dot.active span,.owl-theme .owl-dots .owl-dot:hover span{background:#999;}
 
-
 /*  ANIMACAO DO PLUGUIN */
 
-.owl-carousel .animated {-webkit-animation-duration: 1000ms; animation-duration: 1000ms; -webkit-animation-fill-mode: both;  animation-fill-mode: both;}
-.owl-carousel .owl-animated-in {z-index: 0;}
-.owl-carousel .owl-animated-out { z-index: 1;}
-.owl-carousel .fadeOut {-webkit-animation-name: fadeOut; animation-name: fadeOut;}
+// .owl-carousel .animated {-webkit-animation-duration: 1000ms; animation-duration: 1000ms; -webkit-animation-fill-mode: both;  animation-fill-mode: both;}
+// .owl-carousel .owl-animated-in {z-index: 0;}
+// .owl-carousel .owl-animated-out { z-index: 1;}
+// .owl-carousel .fadeOut {-webkit-animation-name: fadeOut; animation-name: fadeOut;}
 
 @-webkit-keyframes fadeOut {
   0% {
